--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 cursive = { version = "0.18.0", features = [ "toml" ] }
 simple-error = "0.2.3"
+fraction = "0.11.0"
