--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 cursive = { version = "0.18.0", features = [ "toml" ] }
 simple-error = "0.2.3"
 fraction = "0.11.0"
+lazy_static = "1.4.0"
+regex = "1.5.6"
