--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ edition = "2021"
 [dependencies]
 cursive = { version = "0.18.0", features = [ "toml" ] }
 simple-error = "0.2.3"
-fraction = "0.11.0"
+fraction = { version = "0.11.0", features = [ "with-serde-support" ] }
 lazy_static = "1.4.0"
 regex = "1.5.6"
+serde = {version = "1.0.137", features = ["derive"] }
+serde_json = "1.0.81"
+uuid = { version = "1.1.2", features = [ "v4" , "serde" ] }
+lz4_flex = "0.9.3"
