--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cursive = { version = "0.18.0", features = [ "toml" ] }
+cursive = { version = "0.18.0", features = [ "toml", "crossterm-backend" ] }
 simple-error = "0.2.3"
 fraction = { version = "0.11.0", features = [ "with-serde-support" ] }
 lazy_static = "1.4.0"
