--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ serde = {version = "1.0.137", features = ["derive"] }
 serde_json = "1.0.81"
 uuid = { version = "1.1.2", features = [ "v4" , "serde" ] }
 lz4_flex = "0.9.3"
+directories = "4.0.1"
