--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ serde_json = "1.0.81"
 uuid = { version = "1.1.2", features = [ "v4" , "serde" ] }
 lz4_flex = "0.9.3"
 directories = "4.0.1"
+toml = "0.5.9"
