--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,14 +6,16 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cursive = { version = "0.18.0", features = [ "toml", "crossterm-backend" ] }
-simple-error = "0.2.3"
-fraction = { version = "0.11.0", features = [ "with-serde-support" ] }
-lazy_static = "1.4.0"
-regex = "1.5.6"
-serde = {version = "1.0.137", features = ["derive"] }
-serde_json = "1.0.81"
-uuid = { version = "1.1.2", features = [ "v4" , "serde" ] }
-lz4_flex = "0.9.3"
-directories = "4.0.1"
-toml = "0.5.9"
+cursive = { version = "0.18.0", features = [ "toml", "crossterm-backend" ] }    # TUI
+simple-error = "0.2.3"                                                          # Simple error creation
+fraction = { version = "0.11.0", features = [ "with-serde-support" ] }          # Fractional numbers
+lazy_static = "1.4.0"                                                           # Caching regex compilations
+regex = "1.5.6"                                                                 # Regex for various uses
+serde = {version = "1.0.137", features = ["derive"] }                           # Serialization tool
+uuid = { version = "1.1.2", features = [ "v4" , "serde" ] }                     # UUID generation
+lz4_flex = "0.9.3"                                                              # Fast data compression
+directories = "4.0.1"                                                           # Used to grab the default config/data directories per OS
+toml = "0.5.9"                                                                  # Toml Serialization
+clap = { version = "3.2.6", features = ["derive", "unicode"] }                  # Command line argument parser
+termcolor = "1.1.3"                                                             # Terminal colors n stuff
+bincode = "1.3.3"                                                               # Binary storage format
