--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ toml = "0.5.9"                                                                  
 clap = { version = "3.2.6", features = ["derive", "unicode"] }                  # Command line argument parser
 termcolor = "1.1.3"                                                             # Terminal colors n stuff
 bincode = "1.3.3"                                                               # Binary storage format
+serial_test = "0.8.0"                                                           # Serial tests(why isn't this a default rust feature)
