--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ homepage = "https://openapeshop.org/software/apecrunch/"
 [dependencies]
 bincode = "1.3.3"                                                                                           # Binary storage format
 clap = { version = "3.2.21", features = ["derive", "unicode"] }                                             # Command line argument parser
-cursive = { version = "0.19.0", default-features = false, features = ["toml", "crossterm-backend", "markdown"] }    # TUI
+cursive = { version = "0.19.0", default-features = false, features = ["toml", "crossterm-backend"] }        # TUI
 directories = "4.0.1"                                                                                       # Used to grab the default config/data directories per OS
 fraction = { version = "0.11.1", features = ["with-serde-support"] }                                        # Fractional numbers
 lazy_static = "1.4.0"                                                                                       # Caching regex compilations
